RESOLVED FIXED270734
Fix memory leak under [WKKeyedCoder initWithDictionary]
https://bugs.webkit.org/show_bug.cgi?id=270734
Summary Fix memory leak under [WKKeyedCoder initWithDictionary]
Chris Dumez
Reported 2024-03-08 23:14:09 PST
Fix memory leak under [WKKeyedCoder initWithDictionary].
Attachments
Chris Dumez
Comment 1 2024-03-08 23:14:18 PST
Chris Dumez
Comment 2 2024-03-08 23:16:12 PST
EWS
Comment 3 2024-03-09 08:00:33 PST
Committed 275875@main (b1fa8241a6a7): <https://commits.webkit.org/275875@main> Reviewed commits have been landed. Closing PR #25665 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.