Cherry-pick b1fa8241a6a7. rdar://124247709

Fix memory leak under [WKKeyedCoder initWithDictionary]
    https://bugs.webkit.org/show_bug.cgi?id=270734
    rdar://124247709

    Reviewed by Darin Adler.

    Make sure we adopt the result of `[NSDictionary mutableCopy]`.

    * Source/WebKit/Shared/Cocoa/WKKeyedCoder.mm:
    (-[WKKeyedCoder initWithDictionary:]):

    Canonical link: https://commits.webkit.org/275875@main

Identifier: 273664.1391@safari-7619.1.5-branch